--- a/.salt/files/nginx.upstreams.conf
+++ b/.salt/files/nginx.upstreams.conf
@@ -1,2 +1,2 @@
 {% set data = salt['mc_utils.json_load'](data).cfg.data%}
-upstream app { server {{data.host}}:{{data.port}}; }
+upstream {{cfg.name}}app { server {{data.host}}:{{data.port}}; }
