--- a/.salt/files/nginx.content.conf
+++ b/.salt/files/nginx.content.conf
@@ -1,5 +1,11 @@
-{% set data = salt['mc_utils.json_load'](data).cfg.data%}
+{% set cfg = salt['mc_utils.json_load'](data).cfg%}
+{% set data = cfg.data %}
+{% if data.get('http_users', {}) %}
+auth_basic            "Restricted";
+auth_basic_user_file  {{data.htaccess}};
+{% endif %}
+
 location / {
     include proxy_params;
-    proxy_pass http://app;
+    proxy_pass http://{{cfg.name}}app;
 }
