--- a/.salt/files/nginx.upstreams.conf
+++ b/.salt/files/nginx.upstreams.conf
@@ -1,2 +1,3 @@
-{% set data = salt['mc_utils.json_load'](data).cfg.data%}
+{% set cfg = salt['mc_utils.json_load'](data).cfg%}
+{% set data = cfg.data %}
 upstream {{cfg.name}}app { server {{data.host}}:{{data.port}}; }
