--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 gunicorn
-wtforms=1.0.5
-Flask = 0.10.1
-Flask-Admin = 1.0.8
-Flask-Login = 0.2.11
-Flask-SQLAlchemy = 1.0
-Flask-WTF = 0.9.5
-Jinja2 = 2.7.2
-MarkupSafe = 0.23
-Werkzeug = 0.9.4
-itsdangerous = 0.24
-mr.developer = 1.30
-nose = 1.3.3
-pycurl = 7.19.3.1
-requests = 2.3.0
-SQLAlchemy = 0.9.4
+wtforms == 1.0.5
+Flask == 0.10.1
+Flask-Admin == 1.0.8
+Flask-Login == 0.2.11
+Flask-SQLAlchemy == 1.0
+Flask-WTF == 0.9.5
+Jinja2 == 2.7.2
+MarkupSafe == 0.23
+Werkzeug == 0.9.4
+itsdangerous == 0.24
+nose == 1.3.3
+pycurl == 7.19.3.1
+requests == 2.3.0
+SQLAlchemy == 0.9.4
+-e ./
