--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+six == 1.5.0
 gunicorn
 wtforms == 1.0.5
 Flask == 0.10.1
 Flask-Admin == 1.0.8
 Flask-Login == 0.2.11
 Flask-SQLAlchemy == 1.0
-Flask-WTF == 0.9.5
+Flask-Script == 0.5.3
 Jinja2 == 2.7.2
 MarkupSafe == 0.23
 Werkzeug == 0.9.4
@@ -13,4 +14,16 @@ nose == 1.3.3
 pycurl == 7.19.3.1
 requests == 2.3.0
 SQLAlchemy == 0.9.4
+SQLAlchemy-Utils == 0.16.5
+#Flask-WTF == 0.9.5
+#WTForms == 1.0.4
+#WTForms-Alchemy == 0.7.11
+#WTForms-Components == 0.7.0
+#mimerender == 0.5.4
+#Pillow == 2.7.0
+#Flask-Restless == 0.15.1
+#Flask_RESTful == 0.2.3
+#Flask-Uploads == 0.1.3
+#python-dateutil == 2.4.0
+#python-mimeparse == 0.1.4
 -e ./
