--- a/.salt/files/nginx.content.conf
+++ b/.salt/files/nginx.content.conf
@@ -1,11 +1,52 @@
-{% set cfg = salt['mc_utils.json_load'](data).cfg%}
+{% set cfg = salt['mc_project.get_configuration'](
+      salt['mc_utils.json_load'](data).project) %}
 {% set data = cfg.data %}
-{% if data.get('http_users', {}) %}
+# process flask requests whenever we get a 418 ERROR, search below
+error_page 418 = @flask;
+
+{% if data.get('force_ssl', False) %}
+if ($forwarded_ssl_scheme != "https"){
+    rewrite ^(.*)$ https://{{data.domain}}$1 permanent;
+}
+{% endif %}
+
+{% macro auth() %}
+{% if data.get('ldap_url', '') %}
+auth_ldap "Restricted(ldap)";
+auth_ldap_servers {{cfg.name}}auth;
+{% elif data.get('http_users', {}) %}
 auth_basic            "Restricted";
 auth_basic_user_file  {{data.htaccess}};
 {% endif %}
+{% endmacro %}
 
+location /static/ {
+    {{auth()}}
+    alias {{data.flask_settings.DATA_FOLDER}}/;
+}
 location / {
+    {{auth()}}
+    return 418;
+}
+
+# invalid dot dirs
+{% for location in data.get('disabled_urls', []) %}
+location ~* {{location}} {
+    return 404;
+}
+{% endfor%}
+
+{% if data.get('admin_allowed_ips', []) %}
+{% set admin_url = data.get('admin_url', '/admin') %}
+location ~ {{admin_url}}.* {
+    rewrite ^{{admin_url}}$ {{admin_url}}/ redirect;
+    if ($dont_show_admin) {return 404;}
+    return 418;
+}
+{% endif %}
+
+location @flask {
+    {{auth()}}
     include proxy_params;
     proxy_pass http://{{cfg.name}}app;
-}
+} 
