--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 six == 1.5.0
+ipython == 0.3.2
 gunicorn
 wtforms == 1.0.5
 Flask == 0.10.1
 Flask-Admin == 1.0.8
 Flask-Login == 0.2.11
 Flask-SQLAlchemy == 1.0
-Flask-Script == 0.5.3
+Flask-Script == 2.0.5
 Jinja2 == 2.7.2
 MarkupSafe == 0.23
 Werkzeug == 0.9.4
